--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "jquery": "^3.0.0",
+    "method-override": "^2.3.6",
     "mongoose": "^4.5.0",
+    "node-restful": "^0.2.5",
     "nodemon": "^1.9.2"
   }
 }
